--- a/Feedback.html
+++ b/Feedback.html
@@ -7,5 +7,9 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="assets/img/epicode_logo.png" alt="" />
+    </header>
+  </body>
 </html>
