--- a/Result.html
+++ b/Result.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/Results.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="assets/img/epicode_logo.png" alt="" />
+    </header>
+    <main id="results-page">
+      <div class="results">
+        <h1 id="">Results</h1>
+        <p>The summary of your answers:</p>
+      </div>
+      <di class="correct"></di>
+      <div class="wrong"></div>
+      <div class="rate-us"></div>
+    </main>
+  </body>
 </html>
