Eliminazione cartella, correzione Path e aggiunto qualche stile extra

--- a/Result.html
+++ b/Result.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/css/reset.css" />
-    <link rel="stylesheet" href="../assets/css/style.css" />
-    <link rel="stylesheet" href="Results.css" />
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/Results.css" />
     <title>Results</title>
   </head>
   <body>
@@ -45,7 +45,7 @@
 
       <!-- BOTTONE RATE US -->
       <div class="rate-us">
-        <button>RATE US</button>
+        <button id="rate-us-button">RATE US</button>
       </div>
       <!-- FINE BOTTONE -->
     </main>
