--- a/Result.html
+++ b/Result.html
@@ -50,6 +50,6 @@
       <!-- FINE BOTTONE -->
     </main>
     <!-- FINE MAIN -->
-    <script src="Results.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
