--- a/Welcome.html
+++ b/Welcome.html
@@ -39,10 +39,17 @@
       </div>
     </main>
     <footer class="footerWelcome">
-      <input type="checkbox" name="consenso" class="checkbox" />
-      <label for="consenso"
-        >I promise to answer myself without help from anyone</label
-      >
+      <div id="inputPreview">
+        <input
+          name="cssCheckbox"
+          id="demo_opt_1"
+          type="checkbox"
+          class="css-checkbox"
+        />
+        <label for="demo_opt_1"
+          >I promise to answer myself without help from anyone</label
+        >
+      </div>
       <button onclick="buttonProceed()">PROCEED</button>
       <p id="campoObb"></p>
     </footer>
