--- a/Benchmark.html
+++ b/Benchmark.html
@@ -38,6 +38,6 @@
     </div>
   </footer>
   <script src="js/bench.js"></script>
-  <script src="js/timer.js"></script>
+  <script src="timer.js"></script>
 </body>
 </html>
