--- a/Result.html
+++ b/Result.html
@@ -31,7 +31,29 @@
 
       <!-- GRAFICO A CIAMBELLA -->
       <div class="circle-graphic">
-        <canvas id="myChart"></canvas>
+        <svg
+          class="base-chart__svg"
+          viewBox="-15 -15 120 120"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g class="base-chart__circle">
+            <circle class="base-chart__path-elapsed" cx="50" cy="50" r="45" />
+            <path
+              id="base-timer-path-remaining"
+              stroke-dasharray="283"
+              class="base-timer__path-remaining ${remainingPathColor}"
+              d="
+          M 50, 50
+          m -45, 0
+          a 45,45 0 1,0 90,0
+          a 45,45 0 1,0 -90,0
+        "
+            ></path>
+          </g>
+        </svg>
+        <span id="base-chart-label" class="base-chart__label">
+          <!-- Remaining time label -->Grafico
+        </span>
       </div>
       <!-- FINE GRAFICO A CIAMBELLA -->
 
