--- a/Benchmark.html
+++ b/Benchmark.html
@@ -18,17 +18,19 @@
 
   <main>
     <div class="containerMain">
-      <h1 class="transpTitle">How can I create a</h1>
-      <h1>checkbox in HTML?</h1>
+      <div class="containerTitles">
+        <h1 class="transpTitle">What does CPU stand for?</h1>
+      
+    </div>
       <div class="divQuestion">
         <div class="colum">
-          <button class="button">&lt; input type = "check"&gt;</button>
-          <button class="button">&lt;checkbox &gt;</button>
+        <!--   <button class="button">&lt; input type = "check"&gt;</button>
+          <button class="button">&lt;checkbox &gt;</button>-->
         </div>
-        <div class="colum">
-          <button class="button">&lt;input type = "checkbox"' &gt;</button>
+        <!-- <div class="colum">
+           <button class="button">&lt;input type = "checkbox"' &gt;</button>
           <button class="button">&lt;input type = "button" &gt;</button>
-        </div>
+        </div>-->
       </div>
     </div>
   </main>
@@ -37,7 +39,7 @@
       <p>QUESTION</p>
     </div>
   </footer>
-  <script src="js/bench.js"></script>
+  
   <script src="timer.js"></script>
 </body>
 </html>
