--- a/Feedback.html
+++ b/Feedback.html
@@ -22,7 +22,11 @@
         <div class="stars"></div>
         <p>Leave us an open feedback about your experience so far</p>
         <div class="input-container">
-          <input type="text" placeholder="Write your comment here" />
+          <input
+            type="text"
+            id="feedbackInput"
+            placeholder="Write your comment here"
+          />
         </div>
       </div>
     </main>
