--- a/Feedback.html
+++ b/Feedback.html
@@ -32,7 +32,7 @@
     </main>
     <footer>
       <div class="btn-feedback">
-        <button>MORE INFO</button>
+        <button id="btn-info">MORE INFO</button>
       </div>
     </footer>
     <script src="script.js"></script>
