add some comments and create a new file js for merge

--- a/Result.html
+++ b/Result.html
@@ -72,6 +72,6 @@
       <!-- FINE BOTTONE -->
     </main>
     <!-- FINE MAIN -->
-    <script src="script.js"></script>
+    <script src="results.js"></script>
   </body>
 </html>
