--- a/Feedback.html
+++ b/Feedback.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/feedback.css" />
-    <title>Document</title>
+    <title>Feedback Page</title>
   </head>
   <body>
     <header>
