--- a/Feedback.html
+++ b/Feedback.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <img src="assets/img/epicode_logo.png" alt="" />
+      <img src="assets/img/epicode_logo.png" alt="epicode_logo" />
     </header>
     <main>
       <div id="feedback-container">
