--- a/Benchmark.html
+++ b/Benchmark.html
@@ -1,10 +1,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../assets/css/reset.css" />
-  <link rel="stylesheet" href="../assets/css/style.css" />
-  <link rel="stylesheet" href="../benchmarkcss/timer.css" />
-  <link rel="stylesheet" href="../benchmarkcss/bench.css" />
+  <link rel="stylesheet" href="/assets/css/reset.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/timer.css" />
+  <link rel="stylesheet" href="/assets/css/bench.css" />
   <title>Document</title>
 </head>
 <body>
@@ -17,20 +17,13 @@
   </header>
 
   <main>
+    
     <div class="containerMain">
-      <div class="containerTitles">
-        <h1 class="transpTitle">What does CPU stand for?</h1>
-       
+      <div id="containerTitles">
     </div>
       <div class="divQuestion">
-        <div class="colum">
-        <!--   <button class="button">&lt; input type = "check"&gt;</button>
-          <button class="button">&lt;checkbox &gt;</button>-->
+        <div id="colum">
         </div>
-        <!-- <div class="colum">
-           <button class="button">&lt;input type = "checkbox"' &gt;</button>
-          <button class="button">&lt;input type = "button" &gt;</button>
-        </div>-->
       </div>
     </div>
 
