changes css benchmark

--- a/Benchmark.html
+++ b/Benchmark.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header>
-    <div style="display: flex; justify-content: space-between">
-      <span> <img src="../assets/img/epicode_logo.png" alt="logo" /></span>
+    <div class="divTimer">
+      <span> <img src="/assets/img/epicode_logo.png" alt="logo" /></span>
       <div class="timer"><div id="app"></div></div>
     </div>
     <div class="timer"><div id="app"></div></div>
