--- a/Benchmark.html
+++ b/Benchmark.html
@@ -30,7 +30,7 @@
   </main>
   <footer>
     <div class="footerQuestions">
-      <p>QUESTION</p>
+      <p>QUESTION <span class="indexDomanda"></span></p>
     </div>
   </footer>
   
