--- a/Result.html
+++ b/Result.html
@@ -72,6 +72,6 @@
       <!-- FINE BOTTONE -->
     </main>
     <!-- FINE MAIN -->
-    <script src="results.js"></script>
+    <script src="timer.js"></script>
   </body>
 </html>
