--- a/Benchmark.html
+++ b/Benchmark.html
@@ -1,39 +1,101 @@
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/assets/css/reset.css" />
-  <link rel="stylesheet" href="/assets/css/style.css" />
-  <link rel="stylesheet" href="/assets/css/timer.css" />
-  <link rel="stylesheet" href="/assets/css/bench.css" />
-  <title>Document</title>
-</head>
-<body>
-  <header>
-    <div class="divTimer">
-      <span> <img src="/assets/img/epicode_logo.png" alt="logo" /></span>
+<!DOCTYPE html>
+<html lang="it">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/css/reset.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/timer.css" />
+    <link rel="stylesheet" href="/assets/css/bench.css" />
+    <link rel="stylesheet" href="/assets/css/Results.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <div class="divTimer">
+        <span> <img src="/assets/img/epicode_logo.png" alt="logo" /></span>
+        <div class="timer"><div id="app"></div></div>
+      </div>
       <div class="timer"><div id="app"></div></div>
-    </div>
-    <div class="timer"><div id="app"></div></div>
-  </header>
+    </header>
 
-  <main>
-    
-    <div class="containerMain">
-      <div id="containerTitles">
-    </div>
-      <div class="divQuestion">
-        <div id="colum">
+    <main>
+      <div class="containerMain">
+        <div id="containerTitles"></div>
+        <div class="divQuestion">
+          <div id="colum"></div>
         </div>
       </div>
-    </div>
+    </main>
+    <footer>
+      <div class="footerQuestions">
+        <p>QUESTION <span class="indexDomanda"></span></p>
+      </div>
+    </footer>
 
-  </main>
-  <footer>
-    <div class="footerQuestions">
-      <p>QUESTION <span class="indexDomanda"></span></p>
-    </div>
-  </footer>
-  
-  <script src="timer.js"></script>
-</body>
+    <!-- HEADER -->
+    <header class="showBench">
+      <img src="assets/img/epicode_logo.png" alt="" />
+    </header>
+    <!-- FINE HEADER -->
+    <!-- MAIN -->
+    <main id="results-page" class="showBench">
+      <div class="results">
+        <h1 id="">Results</h1>
+        <p>The summary of your answers:</p>
+      </div>
+
+      <!-- RISPOSTE CORRETTE -->
+      <div class="correct">
+        <h2>Correct</h2>
+        <p class="percentuale">66.7%</p>
+        <p class="questions"><span>4/6 </span>questions</p>
+      </div>
+      <!-- FINE RISPOSTE CORRETTE -->
+
+      <!-- GRAFICO A CIAMBELLA -->
+      <div class="circle-graphic">
+        <svg
+          class="base-chart__svg"
+          viewBox="-15 -15 120 120"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g class="base-chart__circle">
+            <circle id="base-chart__path-elapsed" cx="50" cy="50" r="45" />
+            <path
+              id="base-chart-path-remaining"
+              stroke-dasharray="283"
+              class="base-chart__path-remaining"
+              d="
+        M 50, 50
+        m -45, 0
+        a 45,45 0 1,0 90, 0
+        a 45,45 0 1,0 -90, 0
+      "
+            ></path>
+          </g>
+        </svg>
+        <div id="base-chart-label" class="base-chart__label">
+          <p class="results-questions">Congratulation</p>
+        </div>
+      </div>
+      <!-- FINE GRAFICO A CIAMBELLA -->
+
+      <!-- RISPOSTE SBAGLIATE -->
+      <div class="wrong">
+        <h2>Wrong</h2>
+        <p class="percentuale">33.3%</p>
+        <p class="questions"><span>4/6 </span>questions</p>
+      </div>
+      <!-- FINE RISPOSTE SBAGLIATE -->
+
+      <!-- BOTTONE RATE US -->
+      <div class="rate-us">
+        <button id="rate-us-button">RATE US</button>
+      </div>
+      <!-- FINE BOTTONE -->
+    </main>
+    <!-- FINE MAIN -->
+    <script src="timer.js"></script>
+  </body>
 </html>
