aggiunto scritte grafico

--- a/Benchmark.html
+++ b/Benchmark.html
@@ -48,8 +48,10 @@
       <!-- RISPOSTE CORRETTE -->
       <div class="correct">
         <h2>Correct</h2>
-        <p class="percentuale">66.7%</p>
-        <p class="questions"><span>4/6 </span>questions</p>
+        <p class="percentuale" id="percentuale-corretta">66.7%</p>
+        <p class="questions" id="questions-corrette">
+          <span>4/6 </span>questions
+        </p>
       </div>
       <!-- FINE RISPOSTE CORRETTE -->
 
@@ -77,6 +79,10 @@
         </svg>
         <div id="base-chart-label" class="base-chart__label">
           <p class="results-questions">Congratulation</p>
+
+          <div class="testo-colorato">
+            <p class="colorato">Testo Colorato</p>
+          </div>
         </div>
       </div>
       <!-- FINE GRAFICO A CIAMBELLA -->
@@ -84,8 +90,10 @@
       <!-- RISPOSTE SBAGLIATE -->
       <div class="wrong">
         <h2>Wrong</h2>
-        <p class="percentuale">33.3%</p>
-        <p class="questions"><span>4/6 </span>questions</p>
+        <p class="percentuale" id="percentuale-sbagliata">33.3%</p>
+        <p class="questions" id="questions-sbagliate">
+          <span>4/6 </span>questions
+        </p>
       </div>
       <!-- FINE RISPOSTE SBAGLIATE -->
 
