--- a/Benchmark.html
+++ b/Benchmark.html
@@ -83,6 +83,9 @@
           <div class="testo-colorato">
             <p class="colorato">Testo Colorato</p>
           </div>
+          <div class="testo-certificato">
+            <p></p>
+          </div>
         </div>
       </div>
       <!-- FINE GRAFICO A CIAMBELLA -->
