--- a/Feedback.html
+++ b/Feedback.html
@@ -35,6 +35,6 @@
         <button id="btn-info">MORE INFO</button>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="feedback.js"></script>
   </body>
 </html>
