--- a/Welcome.html
+++ b/Welcome.html
@@ -38,6 +38,24 @@
           <li>This exam will take approx. <span>0-5 minutes</span>.</li>
         </ul>
       </div>
+      <div class="userSelect">
+        <div>
+          <label for="difficult">What difficult?</label>
+          <select name="difficult" id="difficult">
+            <option value="Easy">Easy</option>
+            <option value="Medium">Medium</option>
+            <option value="Hard">Hard</option>
+          </select>
+        </div>
+        <div>
+          <label for="quantity">How many questions?</label>
+          <select name="quantity" id="quantity">
+            <option value="10">10</option>
+            <option value="20">20</option>
+            <option value="30">30</option>
+          </select>
+        </div>
+      </div>
     </main>
     <footer class="footerWelcome">
       <div id="inputPreview">
