Some extra works for css and js

--- a/Feedback.html
+++ b/Feedback.html
@@ -22,17 +22,15 @@
         <div class="stars"></div>
         <p>Leave us an open feedback about your experience so far</p>
         <div class="input-container">
-          <input
-            type="text"
-            id="feedbackInput"
-            placeholder="Write your comment here"
-          />
+          <input type="text" placeholder="Write your comment here" />
         </div>
       </div>
+      <div class="thanks-container"></div>
     </main>
     <footer>
       <div class="btn-feedback">
-        <button id="btn-info">MORE INFO</button>
+        <button id="btn-enter">INVIA FEEDBACK</button>
+        <button id="btn-info" class="btn-information">MORE INFO</button>
       </div>
     </footer>
     <script src="script.js"></script>
