--- a/Feedback.html
+++ b/Feedback.html
@@ -31,6 +31,7 @@
       <div class="btn-feedback">
         <button id="btn-enter">INVIA FEEDBACK</button>
         <button id="btn-info" class="btn-information">MORE INFO</button>
+        <p class="copyright">©️ 2024 EPICODE | Roma - Milano - Berlino |</p>
       </div>
     </footer>
     <script src="script.js"></script>
