add class li content

--- a/Welcome.html
+++ b/Welcome.html
@@ -25,7 +25,7 @@
         </p>
         <p>questions, so don't worry if you're unsure of a few of them.</p>
       </div>
-      <div>
+      <div class="li-content">
         <ul>
           <li>
             Each question is <span>timed</span> and can only be
