--- a/Welcome.html
+++ b/Welcome.html
@@ -39,18 +39,25 @@
         </ul>
       </div>
       <div class="userSelect">
+        <!-- assegno una classe al contenitore che conterrà i due campi di scelta utente-->
         <div>
-          <label for="difficult">What difficult?</label>
+          <label for="difficult">What difficult?</label
+          ><!-- label "lega" del testo al select tramite "for"-->
           <select name="difficult" id="difficult">
+            <!-- Uso un tag di tipo select per inserire all'interno della pagina welcome una scelta multipla a tendina -->
             <option value="Easy">Easy</option>
+            <!-- option sono le varie scelte date all'utente-->
             <option value="Medium">Medium</option>
             <option value="Hard">Hard</option>
           </select>
         </div>
         <div>
           <label for="quantity">How many questions?</label>
+          <!-- label "lega" del testo al select tramite "for"-->
           <select name="quantity" id="quantity">
+            <!-- Uso un tag di tipo select per inserire una scelta multipla a tendina questa volta per il numero di domande -->
             <option value="10">10</option>
+            <!-- option sono le varie scelte date all'utente-->
             <option value="20">20</option>
             <option value="30">30</option>
           </select>
