--- a/Welcome.html
+++ b/Welcome.html
@@ -44,7 +44,7 @@
           <label for="difficult">What difficult?</label
           ><!-- label "lega" del testo al select tramite "for"-->
           <select name="difficult" id="difficult">
-            <!-- Uso un tag di tipo select per inserire all'interno della pagina welcome una scelta multipla a tendina -->
+            <!-- Uso un tag di tipo select per inserire all'interno della pagina welcome una scelta a tendina -->
             <option value="Easy">Easy</option>
             <!-- option sono le varie scelte date all'utente-->
             <option value="Medium">Medium</option>
@@ -55,7 +55,7 @@
           <label for="quantity">How many questions?</label>
           <!-- label "lega" del testo al select tramite "for"-->
           <select name="quantity" id="quantity">
-            <!-- Uso un tag di tipo select per inserire una scelta multipla a tendina questa volta per il numero di domande -->
+            <!-- Uso un tag di tipo select per inserire una scelta a tendina questa volta per il numero di domande -->
             <option value="10">10</option>
             <!-- option sono le varie scelte date all'utente-->
             <option value="20">20</option>
